# boatrace-ai

./: .gitignore  CLAUDE.md  README.md  requirements.txt
config/: settings.py
data/odds/: 20251230_23_01.json
models/onnx/: metadata.json  position_1.onnx  position_2.onnx  position_3.onnx  position_4.onnx  position_5.onnx  position_6.onnx
rust-api/: Cargo.toml  README.md
rust-api/src/: error.rs  lib.rs  main.rs  models.rs  predictor.rs
rust-api/src/backtesting/: metrics.rs  mod.rs  simulator.rs  synthetic.rs
rust-api/src/core/: kelly.rs  mod.rs
rust-api/src/data/: csv_loader.rs  features.rs  history.rs  mod.rs  odds_loader.rs  parser.rs
rust-api/src/handlers/: health.rs  mod.rs  predict.rs
rust-api/src/scraper/: client.rs  entries.rs  exacta.rs  mod.rs  schedule.rs  trifecta.rs
scripts/: compare_features.py  debug_features.py
src/: __init__.py  exceptions.py
src/api/: __init__.py
src/backtesting/: __init__.py  metrics.py  report.py  simulator.py  synthetic_odds.py
src/betting/: __init__.py  kelly.py
src/cli/: __init__.py  __main__.py  predict.py
src/data_collection/: collect_daily.py  downloader.py  extractor.py  odds_scraper.py
src/models/: __init__.py  dataset.py  evaluate.py  export_onnx.py  features.py  predictor.py  train.py
src/preprocessing/: parser.py
tests/: __init__.py  conftest.py  test_backtesting.py  test_betting.py  test_data_collection.py  test_models.py  test_preprocessing.py
